Fixes nuget package descriptions overflowing their container when they are too long

--- a/src/Apps/NetPad.Apps.App/App/src/windows/script-config/package-management/package-management.scss
+++ b/src/Apps/NetPad.Apps.App/App/src/windows/script-config/package-management/package-management.scss
@@ -42,6 +42,7 @@ package-management {
 
             .package-description {
                 flex-grow: 1;
+                min-width: 0;
             }
 
             .package-actions {
